test/asm/period.err
ERROR: period.asm(5):
    syntax error, unexpected .
error: Assembly aborted (1 errors)!
